feat: mv to reposilite

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.olexyn</groupId>
 	<artifactId>min-root-spring</artifactId>
-	<version>17.0.0</version>
+	<version>17.0.1</version>
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -95,21 +95,19 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<altDeploymentRepository>internal.repo::default::http://localhost:9020/repository/maven-releases/</altDeploymentRepository>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 	<distributionManagement>
-		<!-- while releasing via github is nice - having a local nexus is just so much less hassle -->
 		<repository>
-			<id>nexus-releases</id>
-			<url>http://localhost:9020/repository/maven-releases/</url>
+			<id>repo-releases</id>
+			<name>repo</name>
+			<url>http://node185214-env-1496405.sh1.hidora.com:11374/releases</url>
 		</repository>
 		<snapshotRepository>
-			<id>nexus-snapshots</id>
-			<url>http://localhost:9020/repository/maven-snapshots/</url>
+			<id>repo-snapshots</id>
+			<name>repo</name>
+			<url>http://node185214-env-1496405.sh1.hidora.com:11374/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 </project>
