--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 	</parent>
 	<groupId>com.olexyn</groupId>
 	<artifactId>min-root-spring</artifactId>
-	<version>17.0.1</version>
+	<version>25.0.0</version>
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<xx.java.version>17</xx.java.version>
+		<xx.java.version>25</xx.java.version>
 	</properties>
 	<build>
 		<pluginManagement>
@@ -21,7 +21,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
-					<version>3.3.2</version>
+					<version>3.5.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -31,7 +31,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.12.1</version>
+					<version>3.14.1</version>
 					<configuration>
 						<source>${xx.java.version}</source>
 						<target>${xx.java.version}</target>
@@ -40,41 +40,42 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.2.5</version>
+					<version>3.5.4</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.3.0</version>
+					<version>3.4.2</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-war-plugin</artifactId>
-					<version>3.3.2</version>
+					<version>3.5.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-install-plugin</artifactId>
-					<version>3.1.1</version>
+					<version>3.1.4</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
-					<version>3.1.1</version>
+					<version>3.1.4</version>
 				</plugin>
 				<plugin>
+					<!-- generates docs and websites from mvn projects. -->
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
-					<version>3.12.1</version>
+					<version>3.21.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-project-info-reports-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>3.9.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.5.0</version>
+					<version>3.9.0</version>
 					<executions>
 						<execution>
 							<goals>
@@ -87,7 +88,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
-					<version>1.2.1</version>
+					<version>3.6.2</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -102,12 +103,12 @@
 		<repository>
 			<id>repo-releases</id>
 			<name>repo</name>
-			<url>http://node185214-env-1496405.sh1.hidora.com:11374/releases</url>
+			<url>https://repo.plexworlds.com/releases</url>
 		</repository>
 		<snapshotRepository>
 			<id>repo-snapshots</id>
 			<name>repo</name>
-			<url>http://node185214-env-1496405.sh1.hidora.com:11374/snapshots</url>
+			<url>https://repo.plexworlds.com/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 </project>
